<resources>
    <string name="app_name">CoviCheck</string>
    <string name="measure_heart_rate">Measure Heart Rate</string>
    <string name="measure_respiratory_rate">Measure Respiratory Rate</string>
    <string name="covid_19_symptom_monitoring_system">Covid-19 Symptom Monitoring System</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="read_from_file">Read From File</string>
    <string name="record_blood_flow">Record Blood Flow</string>
    <string name="heart_rate_measurement">Heart Rate Measurement</string>
    <string name="take_picture">Take picture</string>
    <string name="rate_symptoms">rate symptoms</string>
    <string name="rate_symptoms2">Rate Symptoms</string>
    <string name="nausea">Nausea</string>
    <string name="headache">Headache</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="upload_symptoms">Upload Symptoms</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sore_throat">Sore Throat</string>
    <string name="fever">Fever</string>
    <string name="feeling_tired">Feeling tired</string>
    <string name="shortness_of_breath">Shortness of breath</string>
    <string name="cough">Cough</string>
    <string name="loss_of_smell_or_taste">Loss of smell or taste</string>
    <string name="muscle_ache">Muscle Ache</string>
    <string name="read_file">Read File</string>
    <string name="record_heart_rate">record heart rate</string>
    <string name="record_respiratory_rate">record respiratory rate</string>
</resources>